Add Lesson 1 and half of lesson 2

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <title>JavaScript Review</title>
+
+    <link rel="stylesheet" href="style.css">
+
     <script src="scripts.js" defer> </script>
 </head>
+
 <body>
-    <title>JavaScript Review</title>
+    <section id="Lesson1">
+        <h3>Are u new here?</h3>
+        <button id="isNew">ya</button>
+        <button id="isOld">no</button>
+    </section>
+    
+    <section id="Lesson2">
+        <h3>What is the sum of these two numbers?</h3>
+        <form>
+            <input type="number" id="numberA" />
+            <span>+</span>
+            <input type="number" id="numberB" />
+
+            <button id="sum" type="submit">Sum</button>
+        </form>
+
+        <span>Result: XX</span>
+    </section>
+
 </body>
+
 </html>
