Add Lesson 2: Sum of two numbers

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <button id="isNew">ya</button>
         <button id="isOld">no</button>
     </section>
-    
+
     <section id="Lesson2">
-        <h3>What is the sum of these two numbers?</h3>
+        <h3>What is the sum of these two natural numbers?</h3>
         <form>
             <input type="number" id="numberA" />
             <span>+</span>
@@ -29,7 +29,10 @@
             <button id="sum" type="submit">Sum</button>
         </form>
 
-        <span>Result: XX</span>
+        <p>
+            Result:
+            <span id="showResult">XX</span>
+        </p>
     </section>
 
 </body>
