Add Lesson 3 and 4: Read the values in the form and define whether it is a number or a character string

--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
 
         <p>
             Result:
-            <span id="showResult">XX</span>
+            <span id="showResult">xx</span>
+        </p>
+    </section>
+
+    <section id="Lesson3_4">
+        <h3>Is it a string or a number?</h3>
+        <form>
+            <input type="text" id="randomCharacters" />
+
+            <button type="submit">Discover</button>
+        </form>
+
+        <p>
+            Result:
+            <span>??????</span>
         </p>
     </section>
 
