Add Lesson 6: Subtrartion

--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
         </p>
     </section>
 
+    <section id="Lesson6">
+        <h3>What is the subtraction of these two natural numbers?</h3>
+        <form>
+            <input type="number" id="numberA" />
+            <span>-</span>
+            <input type="number" id="numberB" />
+
+            <button id="subtraction" type="submit">subtraction</button>
+        </form>
+
+        <p>
+            Result:
+            <span id="showSubtraction">xx</span>
+        </p>
+    </section>
+
 </body>
 
 </html>
