Add Lesson 8 & 9: I worked with division and rest of operation

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
 
     <section id="Lesson6">
-        <h3>What is the subtraction of these two natural numbers?</h3>
+        <h3>What is the subtraction of these two integer numbers?</h3>
         <form>
             <input type="number" id="numberA" />
             <span>-</span>
@@ -62,6 +62,22 @@
         <p>
             Result:
             <span id="showSubtraction">xx</span>
+        </p>
+    </section>
+
+    <section id="Lesson8_9">
+        <h3>What is the division of these two integer?</h3>
+        <form>
+            <input type="number" id="numberA" />
+            <span>/</span>
+            <input type="number" id="numberB" />
+
+            <button id="division" type="submit">division</button>
+        </form>
+
+        <p>
+            Result:
+            <span id="showDivision">xx.x and is a ???</span>
         </p>
     </section>
 
